# AI-Revenue-Loss-Detection-Project

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  ML_Report_Latest.tex  README.md  main.py  pyproject.toml  requirements.txt  run_dashboard.bat
.github/workflows/: ci-smoke.yml
.streamlit/: config.toml
DATASET_ieee-cis-elliptic/: README.md
app/: README.md  app.py  streamlit_app.py
app/assets/: custom.css
app/components/: cards.py  dashboard_shell.py  figure_captions.py  figure_story.py  file_utils.py  overview_content.py  research_presentation.py  results_inlined.py  sidebar.py  stage_utils.py  styling.py  tables.py
data/: README.md
docs/: DEMO.md  STAGE_1_TO_5_REPORTS_TABLES_GRAPHS_INFERENCES.md  SUBMISSION_CHECKLIST.md
figures/: README.md
manuscript/: Conclusion_and_Future_Scope.md  Dataset_Overview_Report.md  Methodology_Draft.md  README.md  Results_Summary.md
models/: README.md
processed_data/: README.md  elliptic_graph_experiments.csv  elliptic_transactions_cleaned.csv  final_hybrid_comparison_metrics.csv  final_hybrid_scores.csv  fusion_test_record_ids.csv  gbdt_preds.csv  hybrid_dnn_anomaly_preds.csv  ieee_missing_top20_summary.csv  ieee_train_eda_ready.csv  ieee_train_merged_cleaned.csv  preprocessing_config.json  report_table_1_ieee_cis.csv  report_table_2_elliptic.csv  report_table_3_ablation.csv  stage02_experiment_config.json  stage03_experiment_config.json  stage03_ieee_dnn_baselines.csv  stage04_experiment_config.json  stage05_experiment_config.json
results/: README.md
scripts/: embed_result_tables_appendix.py
(+23 files in other folders)
